Fix millisecond precision on MySQL dates.

--- a/deeplearning/deepsmith/BUILD
+++ b/deeplearning/deepsmith/BUILD
@@ -162,6 +162,7 @@ py_test(
         ":client",
         ":conftest",
         ":generator",
+        ":dateutil",
         ":harness",
         ":profiling_event",
         ":result",
@@ -219,6 +220,7 @@ py_test(
         ":client",
         ":conftest",
         ":generator",
+        ":dateutil",
         ":harness",
         ":profiling_event",
         ":testcase",
