--- a/lib/labm8/BUILD
+++ b/lib/labm8/BUILD
@@ -294,6 +294,7 @@ py_test(
     name = "make_test",
     size = "small",
     srcs = ["make_test.py"],
+    data = glob(["data/makeproj/**"]),
     deps = [
         "//lib/labm8:fs",
         "//lib/labm8:make",
