--- a/gpu/cldrive/tests/BUILD
+++ b/gpu/cldrive/tests/BUILD
@@ -10,6 +10,8 @@ py_test(
     name = "args_test",
     size = "small",
     srcs = ["args_test.py"],
+    default_python_version = "PY3",
+    srcs_version = "PY3",
     deps = [
         ":lib",
         "//gpu/cldrive",
@@ -20,6 +22,8 @@ py_test(
     name = "data_test",
     size = "small",
     srcs = ["data_test.py"],
+    default_python_version = "PY3",
+    srcs_version = "PY3",
     deps = [
         ":lib",
         "//gpu/cldrive",
@@ -30,6 +34,8 @@ py_test(
     name = "driver_test",
     size = "small",
     srcs = ["driver_test.py"],
+    default_python_version = "PY3",
+    srcs_version = "PY3",
     deps = [
         ":lib",
         "//gpu/cldrive",
@@ -40,6 +46,8 @@ py_test(
     name = "env_test",
     size = "small",
     srcs = ["env_test.py"],
+    default_python_version = "PY3",
+    srcs_version = "PY3",
     deps = [
         ":lib",
         "//gpu/cldrive",
