--- a/learn/ml/BUILD
+++ b/learn/ml/BUILD
@@ -2,4 +2,6 @@ py_test(
     name = "batch_linear_regression",
     size = "small",
     srcs = ["batch_linear_regression.py"],
+    default_python_version = "PY3",
+    srcs_version = "PY3",
 )
