--- a/lib/labm8/BUILD
+++ b/lib/labm8/BUILD
@@ -25,6 +25,8 @@ py_test(
     size = "small",
     srcs = ["cache_test.py"],
     data = ["data/test/jsoncache.json"],
+    default_python_version = "PY3",
+    srcs_version = "PY3",
     deps = [
         ":cache",
         ":fs",
@@ -45,6 +47,8 @@ py_test(
         "data/test/empty_file",
         "data/test/hello_world",
     ],
+    default_python_version = "PY3",
+    srcs_version = "PY3",
     deps = [
         "//lib/labm8:crypto",
     ],
@@ -60,6 +64,8 @@ py_test(
     name = "labdate_test",
     size = "small",
     srcs = ["labdate_test.py"],
+    default_python_version = "PY3",
+    srcs_version = "PY3",
     deps = [":labdate"],
 )
 
@@ -86,6 +92,8 @@ py_test(
     size = "small",
     srcs = ["fs_test.py"],
     data = glob(["data/test/testdir/**"]),
+    default_python_version = "PY3",
+    srcs_version = "PY3",
     deps = [
         "//lib/labm8:fs",
         "//lib/labm8:system",
@@ -104,6 +112,8 @@ py_test(
     name = "fmt_test",
     size = "small",
     srcs = ["fmt_test.py"],
+    default_python_version = "PY3",
+    srcs_version = "PY3",
     deps = [":fmt"],
 )
 
@@ -171,6 +181,8 @@ py_library(
 py_test(
     name = "pbutil_test",
     srcs = ["pbutil_test.py"],
+    default_python_version = "PY3",
+    srcs_version = "PY3",
     deps = [
         ":pbutil",
         "//lib/labm8/proto:test_protos",
@@ -241,6 +253,8 @@ py_test(
     name = "io_test",
     size = "small",
     srcs = ["io_test.py"],
+    default_python_version = "PY3",
+    srcs_version = "PY3",
     deps = [
         "//lib/labm8:io",
         "//lib/labm8:system",
@@ -251,6 +265,8 @@ py_test(
     name = "jsonutil_test",
     size = "small",
     srcs = ["jsonutil_test.py"],
+    default_python_version = "PY3",
+    srcs_version = "PY3",
     deps = [
         "//lib/labm8:fs",
         "//lib/labm8:jsonutil",
@@ -262,6 +278,8 @@ py_test(
     name = "latex_test",
     size = "small",
     srcs = ["latex_test.py"],
+    default_python_version = "PY3",
+    srcs_version = "PY3",
     deps = [
         "//lib/labm8:latex",
     ],
@@ -271,6 +289,8 @@ py_test(
     name = "lockfile_test",
     size = "small",
     srcs = ["lockfile_test.py"],
+    default_python_version = "PY3",
+    srcs_version = "PY3",
     deps = [
         "//lib/labm8:lockfile",
     ],
@@ -281,6 +301,8 @@ py_test(
     size = "small",
     srcs = ["make_test.py"],
     data = glob(["data/test/makeproj/**"]),
+    default_python_version = "PY3",
+    srcs_version = "PY3",
     deps = [
         "//lib/labm8:fs",
         "//lib/labm8:make",
@@ -291,6 +313,8 @@ py_test(
     name = "labmath_test",
     size = "small",
     srcs = ["labmath_test.py"],
+    default_python_version = "PY3",
+    srcs_version = "PY3",
     deps = [
         "//lib/labm8:labmath",
     ],
@@ -300,6 +324,8 @@ py_test(
     name = "prof_test",
     size = "small",
     srcs = ["prof_test.py"],
+    default_python_version = "PY3",
+    srcs_version = "PY3",
     deps = [
         "//lib/labm8:prof",
         "//lib/labm8:system",
@@ -310,6 +336,8 @@ py_test(
     name = "system_test",
     size = "small",
     srcs = ["system_test.py"],
+    default_python_version = "PY3",
+    srcs_version = "PY3",
     deps = [
         "//lib/labm8:fs",
         "//lib/labm8:system",
@@ -320,6 +348,8 @@ py_test(
     name = "text_test",
     size = "small",
     srcs = ["text_test.py"],
+    default_python_version = "PY3",
+    srcs_version = "PY3",
     deps = [
         "//lib/labm8:text",
     ],
@@ -329,6 +359,8 @@ py_test(
     name = "labtypes_test",
     size = "small",
     srcs = ["labtypes_test.py"],
+    default_python_version = "PY3",
+    srcs_version = "PY3",
     deps = [
         "//lib/labm8:labtypes",
     ],
@@ -338,6 +370,8 @@ py_test(
     name = "viz_test",
     size = "small",
     srcs = ["viz_test.py"],
+    default_python_version = "PY3",
+    srcs_version = "PY3",
     deps = [
         "//lib/labm8:fs",
         "//lib/labm8:viz",
