BUILD file fixes.

--- a/util/shutterbug/BUILD
+++ b/util/shutterbug/BUILD
@@ -12,11 +12,15 @@ py_library(
 py_binary(
     name = "pack",
     srcs = ["pack.py"],
+    default_python_version = "PY3",
+    srcs_version = "PY3",
     deps = [":shutterbug"],
 )
 
 py_binary(
     name = "unpack",
-    srcs = ["pack.py"],
+    srcs = ["unpack.py"],
+    default_python_version = "PY3",
+    srcs_version = "PY3",
     deps = [":shutterbug"],
 )
