Add missing dpack deps.

--- a/lib/dpack/BUILD
+++ b/lib/dpack/BUILD
@@ -4,6 +4,10 @@ py_library(
     visibility = ["//deeplearning/deepsmith:__subpackages__"],
     deps = [
         "//lib/dpack/proto:dpack_pb2_py",
+        "//lib/labm8:crypto",
+        "//lib/labm8:fs",
+        "//lib/labm8:labdate",
+        "//lib/labm8:pbutil",
     ],
 )
 
