--- a/learn/docker/phd/BUILD
+++ b/learn/docker/phd/BUILD
@@ -1,8 +1,6 @@
 # This package contains defines a docker container for this repo.
 
-genrule(
-    name = "phd_image",
+filegroup(
+    name = "phd",
     srcs = ["Dockerfile"],
-    outs = ["phd_docker_image.tar"],
-    cmd = "cp -v $< $(@D) && sudo docker build -t phd $(@D) && sudo docker save phd -o $@",
 )
