Use data not deps for dependent scripts.

--- a/docs/2018_07_issta/artifact_evaluation/BUILD
+++ b/docs/2018_07_issta/artifact_evaluation/BUILD
@@ -9,7 +9,7 @@
 sh_binary(
     name = "install",
     srcs = ["install.sh"],
-    deps = [
+    data = [
         "//tools:bootstrap",
         "//tools:protoc",
     ],
