--- a/deeplearning/deepsmith/services/BUILD
+++ b/deeplearning/deepsmith/services/BUILD
@@ -1,7 +1,17 @@
 py_library(
     name = "services",
     srcs = ["services.py"],
-    deps = ["//lib/labm8:pbutil"],
+    visibility = ["//deeplearning/deepsmith/cli:__subpackages__"],
+    deps = [
+        "//deeplearning/deepsmith/proto:deepsmith",
+        "//lib/labm8:pbutil",
+    ],
+)
+
+py_library(
+    name = "generator",
+    srcs = ["generator.py"],
+    deps = ["//deeplearning/deepsmith/proto:deepsmith", ":services"],
 )
 
 py_binary(
@@ -9,6 +19,21 @@ py_binary(
     srcs = ["clgen.py"],
     default_python_version = "PY3",
     srcs_version = "PY3",
+    visibility = ["//deeplearning/deepsmith/cli:__subpackages__"],
+    deps = [
+        ":generator",
+        ":services",
+        "//deeplearning/deepsmith/proto:deepsmith",
+        "//lib/labm8:pbutil",
+    ],
+)
+
+py_binary(
+    name = "datastore",
+    srcs = ["datastore.py"],
+    default_python_version = "PY3",
+    srcs_version = "PY3",
+    visibility = ["//deeplearning/deepsmith/cli:__subpackages__"],
     deps = [
         ":services",
         "//deeplearning/deepsmith/proto:deepsmith",
