--- a/deeplearning/deepsmith/services/BUILD
+++ b/deeplearning/deepsmith/services/BUILD
@@ -8,10 +8,27 @@ py_library(
     ],
 )
 
+py_binary(
+    name = "datastore",
+    srcs = ["datastore.py"],
+    default_python_version = "PY3",
+    srcs_version = "PY3",
+    visibility = ["//deeplearning/deepsmith/cli:__subpackages__"],
+    deps = [
+        ":services",
+        "//deeplearning/deepsmith/proto:deepsmith",
+        "//lib/labm8:pbutil",
+    ],
+)
+
 py_library(
     name = "generator",
     srcs = ["generator.py"],
-    deps = ["//deeplearning/deepsmith/proto:deepsmith", ":services"],
+    deps = [
+        ":services",
+        "//deeplearning/deepsmith/proto:deepsmith",
+        "//lib/labm8:pbutil",
+    ],
 )
 
 py_binary(
@@ -28,13 +45,24 @@ py_binary(
     ],
 )
 
+py_library(
+    name = "harness",
+    srcs = ["harness.py"],
+    deps = [
+        ":services",
+        "//deeplearning/deepsmith/proto:deepsmith",
+        "//lib/labm8:pbutil",
+    ],
+)
+
 py_binary(
-    name = "datastore",
-    srcs = ["datastore.py"],
+    name = "cldrive",
+    srcs = ["cldrive.py"],
     default_python_version = "PY3",
     srcs_version = "PY3",
     visibility = ["//deeplearning/deepsmith/cli:__subpackages__"],
     deps = [
+        ":harness",
         ":services",
         "//deeplearning/deepsmith/proto:deepsmith",
         "//lib/labm8:pbutil",
